[package]
name = "hop-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
serde_json = "1.0.70"
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
tokio = { version = "1.24.1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"
