[package]
name = "hop"
description = "Hop Rust SDK"
authors = ["tomheaton"]
version = "0.0.0"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
#    "LICENSE.md",
]
documentation = "https://docs.rs/hop"
# TODO: move to hopinc
homepage = "https://github.com/tomheaton/hop-rs"
repository = "https://github.com/tomheaton/hop-rs"
#license = "MIT"

[dependencies]
rand = "0.8.5"
serde_json = "1.0.70"
reqwest = { version = "0.11.6", features = ["json", "blocking"] }
tokio = { version = "1.24.1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"

[dev-dependencies]
tokio = { version = "1.24.1", features = ["full"] }
rand = "0.8.5"
dotenv = "0.15.0"
